
[TestParseTypeAnnNoErrors/FuncWithoutParams - 1]
&ast.FuncTypeAnn{
    Return: &ast.NumberTypeAnn{
        span: 8-14,
    },
    span: 0-14,
}
---

[TestParseTypeAnnNoErrors/StringLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.StrLit{
        Value: "hello",
        span: 0-7,
    },
    span: 0-7,
}
---

[TestParseTypeAnnNoErrors/NumberTypeAnn - 1]
&ast.NumberTypeAnn{
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/StringTypeAnn - 1]
&ast.StringTypeAnn{
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/NumberLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.NumLit{
        Value: 5,
        span: 0-1,
    },
    span: 0-1,
}
---

[TestParseTypeAnnNoErrors/FuncWithParams - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 3-4,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 6-12,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 14-15,
            },
            TypeAnn: &ast.StringTypeAnn{
                span: 17-23,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 28-35,
    },
    span: 0-35,
}
---

[TestParseTypeAnnNoErrors/FuncWithTypeParams - 1]
&ast.FuncTypeAnn{
    TypeParams: []*ast.TypeParam{
        &ast.TypeParam{
            Name: "T",
            Constraint: &ast.NumberTypeAnn{
                span: 6-12,
            },
            span: 3-12,
        },
        &ast.TypeParam{
            Name: "U",
            Constraint: &ast.StringTypeAnn{
                span: 17-23,
            },
            span: 14-23,
        },
    },
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 25-26,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 28-29,
                },
                span: 28-29,
            },
        },
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "y",
                span: 31-32,
            },
            TypeAnn: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 34-35,
                },
                span: 34-35,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 40-47,
    },
    span: 0-47,
}
---

[TestParseTypeAnnNoErrors/UnionAndIntersectionType - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.IntersectionTypeAnn{
            Types: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: 0-1,
                    },
                    span: 0-1,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: 4-5,
                    },
                    span: 4-5,
                },
            },
            span: 0-5,
        },
        &ast.IntersectionTypeAnn{
            Types: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "X",
                        span: 8-9,
                    },
                    span: 8-9,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Y",
                        span: 12-13,
                    },
                    span: 12-13,
                },
            },
            span: 8-13,
        },
    },
    span: 0-13,
}
---

[TestParseTypeAnnNoErrors/IntersectionType - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 4-5,
            },
            span: 4-5,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 8-9,
            },
            span: 8-9,
        },
    },
    span: 0-9,
}
---

[TestParseTypeAnnNoErrors/UnionType - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 4-5,
            },
            span: 4-5,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 8-9,
            },
            span: 8-9,
        },
    },
    span: 0-9,
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithDot - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "A",
            span: 0-1,
        },
        Right: &ast.Ident{
            Name: "B",
            span: 2-3,
        },
    },
    span: 0-3,
}
---

[TestParseTypeAnnNoErrors/IndexedTypeWithBrackets - 1]
&ast.IndexTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 0-1,
        },
        span: 0-1,
    },
    Index: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 2-3,
        },
        span: 2-3,
    },
    span: 0-4,
}
---

[TestParseTypeAnnNoErrors/MutableType - 1]
&ast.MutableTypeAnn{
    Target: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 4-5,
        },
        span: 4-5,
    },
    span: 4-5,
}
---

[TestParseTypeAnnNoErrors/ConditionalType - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 3-4,
        },
        span: 3-4,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 7-8,
        },
        span: 7-8,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: 11-12,
        },
        span: 11-12,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "D",
            span: 22-23,
        },
        span: 22-23,
    },
    span: 0-23,
}
---

[TestParseTypeAnnNoErrors/BasicObjectType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 1-2,
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 4-5,
                },
                span: 4-5,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "b",
                span: 7-8,
            },
            Optional: true,
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "B",
                    span: 11-12,
                },
                span: 11-12,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "c",
                    span: 15-16,
                },
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "C",
                    span: 19-20,
                },
                span: 19-20,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "d",
                    span: 23-24,
                },
            },
            Optional: true,
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "D",
                    span: 28-29,
                },
                span: 28-29,
            },
        },
    },
    span: 0-30,
}
---

[TestParseTypeAnnNoErrors/MappedObjectType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Keys",
                        span: 20-24,
                    },
                    TypeArgs: []ast.TypeAnn{
                        &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 25-26,
                            },
                            span: 25-26,
                        },
                    },
                    span: 20-27,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 6-7,
                    },
                    span: 6-7,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 8-9,
                    },
                    span: 8-9,
                },
                span: 6-10,
            },
        },
    },
    span: 0-28,
}
---

[TestParseTypeAnnNoErrors/QualifiedTypeRefWithTypeArgs - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 0-3,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 4-7,
        },
    },
    TypeArgs: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 8-9,
            },
            span: 8-9,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 11-12,
            },
            span: 11-12,
        },
    },
    span: 0-13,
}
---

[TestParseTypeAnnNoErrors/QualifiedTypeRef - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Ident{
            Name: "Foo",
            span: 0-3,
        },
        Right: &ast.Ident{
            Name: "Bar",
            span: 4-7,
        },
    },
    span: 0-7,
}
---

[TestParseTypeAnnNoErrors/DeepQualifiedTypeRef - 1]
&ast.TypeRefTypeAnn{
    Name: &ast.Member{
        Left: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 0-3,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 4-7,
            },
        },
        Right: &ast.Ident{
            Name: "Baz",
            span: 8-11,
        },
    },
    span: 0-11,
}
---

[TestParseTypeAnnNoErrors/RegexLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
        span: 0-9,
    },
    span: 0-9,
}
---

[TestParseTypeAnnNoErrors/ConditionalTypeWithInfer - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 3-4,
        },
        span: 3-4,
    },
    Extends: &ast.FuncTypeAnn{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.RestPat{
                    Pattern: &ast.IdentPat{
                        Name: "args",
                        span: 13-17,
                    },
                    span: 10-17,
                },
                TypeAnn: &ast.InferTypeAnn{
                    Name: "P",
                    span: 19-26,
                },
            },
        },
        Return: &ast.AnyTypeAnn{
            span: 31-34,
        },
        span: 7-34,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "P",
            span: 37-38,
        },
        span: 37-38,
    },
    Else: &ast.NeverTypeAnn{
        span: 48-53,
    },
    span: 0-53,
}
---

[TestParseTypeAnnNoErrors/InferType - 1]
&ast.InferTypeAnn{
    Name: "T",
    span: 0-7,
}
---

[TestParseTypeAnnNoErrors/ConditionalTypeWithChaining - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 3-4,
        },
        span: 3-4,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 7-8,
        },
        span: 7-8,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: 11-12,
        },
        span: 11-12,
    },
    Else: &ast.CondTypeAnn{
        Check: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "E",
                span: 23-24,
            },
            span: 23-24,
        },
        Extends: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "F",
                span: 27-28,
            },
            span: 27-28,
        },
        Then: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "G",
                span: 31-32,
            },
            span: 31-32,
        },
        Else: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "H",
                span: 42-43,
            },
            span: 42-43,
        },
        span: 20-43,
    },
    span: 0-43,
}
---

[TestParseTypeAnnNoErrors/FalseLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        span: 0-5,
    },
    span: 0-5,
}
---

[TestParseTypeAnnNoErrors/TrueLiteralTypeAnn - 1]
&ast.LitTypeAnn{
    Lit: &ast.BoolLit{
        Value: true,
        span: 0-4,
    },
    span: 0-4,
}
---

[TestParseTypeAnnNoErrors/UnknownTypeAnn - 1]
&ast.UnknownTypeAnn{
    span: 0-7,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.StringTypeAnn{
                span: 4-10,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 15-16,
                },
                span: 15-16,
            },
            span: 12-16,
        },
    },
    span: 0-17,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithOnlyRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 4-5,
                },
                span: 4-5,
            },
            span: 1-5,
        },
    },
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithMultipleRestSpread - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.StringTypeAnn{
                span: 4-10,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 15-16,
                },
                span: 15-16,
            },
            span: 12-16,
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "y",
                span: 18-19,
            },
            Value: &ast.NumberTypeAnn{
                span: 21-27,
            },
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "U",
                    span: 32-33,
                },
                span: 32-33,
            },
            span: 29-33,
        },
    },
    span: 0-34,
}
---

[TestParseTypeAnnNoErrors/Symbol - 1]
&ast.SymbolTypeAnn{
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/UniqueSymbol - 1]
&ast.UniqueSymbolTypeAnn{
    span: 0-13,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralTypeNoParams - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello-world",
            Span: 1-13,
        },
    },
    span: 0-13,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralType - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello-",
            Span: 1-9,
        },
        &ast.Quasi{
            Span: 11-12,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 9-10,
            },
            span: 9-10,
        },
    },
    span: 0-12,
}
---

[TestParseTypeAnnNoErrors/TemplateLiteralTypeMultipleParams - 1]
&ast.TemplateLitTypeAnn{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Span: 1-3,
        },
        &ast.Quasi{
            Value: "-",
            Span: 5-8,
        },
        &ast.Quasi{
            Value: "-",
            Span: 10-13,
        },
        &ast.Quasi{
            Span: 15-16,
        },
    },
    TypeAnns: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 3-4,
            },
            span: 3-4,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 8-9,
            },
            span: 8-9,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "C",
                span: 13-14,
            },
            span: 13-14,
        },
    },
    span: 0-16,
}
---

[TestParseTypeAnnNoErrors/KeyOfType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 6-7,
        },
        span: 6-7,
    },
    span: 0-7,
}
---

[TestParseTypeAnnNoErrors/KeyOfObjectType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "x",
                    span: 7-8,
                },
                Value: &ast.StringTypeAnn{
                    span: 10-16,
                },
            },
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "y",
                    span: 18-19,
                },
                Value: &ast.NumberTypeAnn{
                    span: 21-27,
                },
            },
        },
        span: 6-28,
    },
    span: 0-28,
}
---

[TestParseTypeAnnNoErrors/UnionTypeWithKeyOf - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.KeyOfTypeAnn{
            Type: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 6-7,
                },
                span: 6-7,
            },
            span: 0-7,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 10-11,
            },
            span: 10-11,
        },
    },
    span: 0-11,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 27-28,
                        },
                        span: 27-28,
                    },
                    span: 21-28,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 7-8,
                    },
                    span: 7-8,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 9-10,
                    },
                    span: 9-10,
                },
                span: 7-11,
            },
            Optional: &"add",
        },
    },
    span: 0-29,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypePropertyRenaming - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 38-39,
                        },
                        span: 38-39,
                    },
                    span: 32-39,
                },
            },
            Name: &ast.TemplateLitTypeAnn{
                Quasis: []*ast.Quasi{
                    &ast.Quasi{
                        Value: "prefix_",
                        Span: 3-12,
                    },
                    &ast.Quasi{
                        Span: 14-15,
                    },
                },
                TypeAnns: []ast.TypeAnn{
                    &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "K",
                            span: 12-13,
                        },
                        span: 12-13,
                    },
                },
                span: 2-15,
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 18-19,
                    },
                    span: 18-19,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 20-21,
                    },
                    span: 20-21,
                },
                span: 18-22,
            },
        },
    },
    span: 0-40,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeWithFiltering - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 26-27,
                        },
                        span: 26-27,
                    },
                    span: 20-27,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 6-7,
                    },
                    span: 6-7,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 8-9,
                    },
                    span: 8-9,
                },
                span: 6-10,
            },
            Check: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 31-32,
                    },
                    span: 31-32,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 33-34,
                    },
                    span: 33-34,
                },
                span: 31-35,
            },
            Extends: &ast.StringTypeAnn{
                span: 38-44,
            },
        },
    },
    span: 0-45,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeRemoveOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 28-29,
                        },
                        span: 28-29,
                    },
                    span: 22-29,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 8-9,
                    },
                    span: 8-9,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 10-11,
                    },
                    span: 10-11,
                },
                span: 8-12,
            },
            Optional: &"remove",
        },
    },
    span: 0-30,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeAddOptionalProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 28-29,
                        },
                        span: 28-29,
                    },
                    span: 22-29,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 8-9,
                    },
                    span: 8-9,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 10-11,
                    },
                    span: 10-11,
                },
                span: 8-12,
            },
            Optional: &"add",
        },
    },
    span: 0-30,
}
---

[TestParseTypeAnnNoErrors/MutableUnionType - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.MutableTypeAnn{
            Target: &ast.NumberTypeAnn{
                span: 4-10,
            },
            span: 4-10,
        },
        &ast.StringTypeAnn{
            span: 13-19,
        },
    },
    span: 4-19,
}
---

[TestParseTypeAnnNoErrors/ObjectTypeWithReadonlyProperty - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "id",
                span: 1-3,
            },
            Value: &ast.NumberTypeAnn{
                span: 5-11,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "name",
                span: 22-26,
            },
            Readonly: true,
            Value: &ast.StringTypeAnn{
                span: 28-34,
            },
        },
    },
    span: 0-35,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeAddReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 36-37,
                        },
                        span: 36-37,
                    },
                    span: 30-37,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 16-17,
                    },
                    span: 16-17,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 18-19,
                    },
                    span: 18-19,
                },
                span: 16-20,
            },
            ReadOnly: &"add",
        },
    },
    span: 0-38,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 35-36,
                        },
                        span: 35-36,
                    },
                    span: 29-36,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 15-16,
                    },
                    span: 15-16,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 17-18,
                    },
                    span: 17-18,
                },
                span: 15-19,
            },
            ReadOnly: &"add",
        },
    },
    span: 0-37,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeRemoveReadonlyProperties - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "P",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 36-37,
                        },
                        span: 36-37,
                    },
                    span: 30-37,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 16-17,
                    },
                    span: 16-17,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "P",
                        span: 18-19,
                    },
                    span: 18-19,
                },
                span: 16-20,
            },
            ReadOnly: &"remove",
        },
    },
    span: 0-38,
}
---

[TestParseTypeAnnNoErrors/VoidTypeAnn - 1]
&ast.VoidTypeAnn{
    span: 1:1-1:5,
}
---

[TestParseTypeAnnErrorHandling/KeyofMissingType - 1]
&ast.KeyOfTypeAnn{
    Type: &ast.ErrorTypeAnn{
        span: 0-5,
    },
    span: 0-5,
}
---

[TestParseTypeAnnErrorHandling/IncompleteUnion - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 0-6,
        },
        &ast.ErrorTypeAnn{
            span: 8-8,
        },
    },
    span: 0-8,
}
---

[TestParseTypeAnnErrorHandling/IncompleteIntersection - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 0-6,
        },
        &ast.ErrorTypeAnn{
            span: 8-8,
        },
    },
    span: 0-8,
}
---

[TestParseTypeAnnErrorHandling/FuncTypeMissingReturnType - 1]
&ast.FuncTypeAnn{
    Return: &ast.ErrorTypeAnn{
        span: 7-7,
    },
    span: 0-7,
}
---

[TestParseTypeAnnErrorHandling/PropertyMissingType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.ErrorTypeAnn{
                span: 4-5,
            },
        },
    },
    span: 0-5,
}
---

[TestParseTypeAnnErrorHandling/KeyofMissingType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 0-5,
        Message: "expected type annotation after 'keyof'",
    },
}
---

[TestParseTypeAnnErrorHandling/IncompleteIntersection - 2]
[]*parser.Error{
    &parser.Error{
        Span: 8-8,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/IncompleteUnion - 2]
[]*parser.Error{
    &parser.Error{
        Span: 8-8,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/PropertyMissingType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 4-5,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/FuncTypeMissingReturnType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 7-7,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingThen - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 3-4,
        },
        span: 3-4,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 7-8,
        },
        span: 7-8,
    },
    Then: &ast.ErrorTypeAnn{
        span: 11-12,
    },
    Else: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "D",
            span: 20-21,
        },
        span: 20-21,
    },
    span: 0-21,
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingElse - 1]
&ast.CondTypeAnn{
    Check: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "A",
            span: 3-4,
        },
        span: 3-4,
    },
    Extends: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "B",
            span: 7-8,
        },
        span: 7-8,
    },
    Then: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "C",
            span: 11-12,
        },
        span: 11-12,
    },
    Else: &ast.ErrorTypeAnn{
        span: 21-21,
    },
    span: 0-21,
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingThen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 11-12,
        Message: "expected a type annotation",
    },
}
---

[TestParseTypeAnnErrorHandling/ConditionalTypeMissingElse - 2]
[]*parser.Error{
    &parser.Error{
        Span: 21-21,
        Message: "expected a type annotation",
    },
    &parser.Error{
        Span: 21-21,
        Message: "Expected } but got ",
    },
}
---

[TestParseTypeAnnNoErrors/UnionTypeWithTypeOf - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeOfTypeAnn{
            Value: &ast.Ident{
                Name: "x",
                span: 7-8,
            },
            span: 7-8,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 11-12,
            },
            span: 11-12,
        },
    },
    span: 7-12,
}
---

[TestParseTypeAnnNoErrors/IntersectionTypeWithTypeOf - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeOfTypeAnn{
            Value: &ast.Ident{
                Name: "x",
                span: 7-8,
            },
            span: 7-8,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 11-12,
            },
            span: 11-12,
        },
    },
    span: 7-12,
}
---

[TestParseTypeAnnNoErrors/IntersectionTypeWithKeyOf - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.KeyOfTypeAnn{
            Type: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 6-7,
                },
                span: 6-7,
            },
            span: 0-7,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 10-11,
            },
            span: 10-11,
        },
    },
    span: 0-11,
}
---

[TestParseTypeAnnNoErrors/TypeOfIdent - 1]
&ast.TypeOfTypeAnn{
    Value: &ast.Ident{
        Name: "x",
        span: 7-8,
    },
    span: 7-8,
}
---

[TestParseTypeAnnNoErrors/TupleWithRestSpreadArray - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1-7,
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Array",
                    span: 12-17,
                },
                TypeArgs: []ast.TypeAnn{
                    &ast.StringTypeAnn{
                        span: 18-24,
                    },
                },
                span: 12-25,
            },
            span: 9-25,
        },
    },
    span: 0-26,
}
---

[TestParseTypeAnnNoErrors/TupleWithTrailingRestSpread - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1-7,
        },
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 12-13,
                },
                span: 12-13,
            },
            span: 9-13,
        },
    },
    span: 0-14,
}
---

[TestParseTypeAnnNoErrors/TupleWithLeadingRestSpread - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.RestSpreadTypeAnn{
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 4-5,
                },
                span: 4-5,
            },
            span: 1-5,
        },
        &ast.StringTypeAnn{
            span: 7-13,
        },
    },
    span: 0-14,
}
---

[TestParseTypeAnnNoErrors/UnionOfFunctions - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 5-6,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 8-14,
                    },
                },
            },
            Return: &ast.StringTypeAnn{
                span: 19-25,
            },
            span: 1-25,
        },
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 34-35,
                    },
                    TypeAnn: &ast.StringTypeAnn{
                        span: 37-43,
                    },
                },
            },
            Return: &ast.NumberTypeAnn{
                span: 48-54,
            },
            span: 30-54,
        },
    },
    span: 1-54,
}
---

[TestParseTypeAnnNoErrors/IntersectionOfFunctions - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 5-6,
                    },
                    TypeAnn: &ast.NumberTypeAnn{
                        span: 8-14,
                    },
                },
            },
            Return: &ast.StringTypeAnn{
                span: 19-25,
            },
            span: 1-25,
        },
        &ast.FuncTypeAnn{
            Params: []*ast.Param{
                &ast.Param{
                    Pattern: &ast.IdentPat{
                        Name: "x",
                        span: 34-35,
                    },
                    TypeAnn: &ast.StringTypeAnn{
                        span: 37-43,
                    },
                },
            },
            Return: &ast.NumberTypeAnn{
                span: 48-54,
            },
            span: 30-54,
        },
    },
    span: 1-54,
}
---

[TestParseTypeAnnNoErrors/ObjectInexact - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "x",
                span: 1-2,
            },
            Value: &ast.NumberTypeAnn{
                span: 4-10,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "y",
                span: 12-13,
            },
            Value: &ast.NumberTypeAnn{
                span: 15-21,
            },
        },
    },
    Inexact: true,
    span: 0-27,
}
---

[TestParseTypeAnnNoErrors/TupleInexact - 1]
&ast.TupleTypeAnn{
    Elems: []ast.TypeAnn{
        &ast.NumberTypeAnn{
            span: 1-7,
        },
        &ast.StringTypeAnn{
            span: 9-15,
        },
    },
    Inexact: true,
    span: 0-21,
}
---

[TestParseTypeAnnNoErrors/ObjectInexactOnly - 1]
&ast.ObjectTypeAnn{
    Inexact: true,
    span: 0-5,
}
---

[TestParseTypeAnnNoErrors/BorrowLifetimeMutType - 1]
&ast.RefTypeAnn{
    Mut: true,
    Lifetime: &ast.LifetimeAnn{
        Name: "a",
        span: 1-3,
    },
    Inner: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "x",
                    span: 9-10,
                },
                Value: &ast.NumberTypeAnn{
                    span: 12-18,
                },
            },
        },
        span: 8-19,
    },
    span: 0-19,
}
---

[TestParseTypeAnnNoErrors/InfixIntersectionStillParses - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 4-5,
            },
            span: 4-5,
        },
    },
    span: 0-5,
}
---

[TestParseTypeAnnNoErrors/BorrowAsIntersectionMember - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.RefTypeAnn{
            Inner: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 1-2,
                },
                span: 1-2,
            },
            span: 0-2,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 5-6,
            },
            span: 5-6,
        },
    },
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/BorrowBindsTighterThanUnion - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.RefTypeAnn{
            Inner: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 1-2,
                },
                span: 1-2,
            },
            span: 0-2,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "B",
                span: 5-6,
            },
            span: 5-6,
        },
    },
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/BorrowMutType - 1]
&ast.RefTypeAnn{
    Mut: true,
    Inner: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "x",
                    span: 6-7,
                },
                Value: &ast.NumberTypeAnn{
                    span: 9-15,
                },
            },
        },
        span: 5-16,
    },
    span: 0-16,
}
---

[TestParseTypeAnnNoErrors/BorrowTypeRef - 1]
&ast.RefTypeAnn{
    Inner: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Point",
            span: 1-6,
        },
        span: 1-6,
    },
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/BorrowLifetimeType - 1]
&ast.RefTypeAnn{
    Lifetime: &ast.LifetimeAnn{
        Name: "a",
        span: 1-3,
    },
    Inner: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "x",
                    span: 5-6,
                },
                Value: &ast.NumberTypeAnn{
                    span: 8-14,
                },
            },
        },
        span: 4-15,
    },
    span: 0-15,
}
---

[TestParseTypeAnnNoErrors/BorrowOfUnion - 1]
&ast.RefTypeAnn{
    Inner: &ast.UnionTypeAnn{
        Types: []ast.TypeAnn{
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "A",
                    span: 2-3,
                },
                span: 2-3,
            },
            &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "B",
                    span: 6-7,
                },
                span: 6-7,
            },
        },
        span: 2-7,
    },
    span: 0-7,
}
---

[TestParseTypeAnnNoErrors/BorrowType - 1]
&ast.RefTypeAnn{
    Inner: &ast.ObjectTypeAnn{
        Elems: []ast.ObjTypeAnnElem{
            &ast.PropertyTypeAnn{
                Name: &ast.IdentExpr{
                    Name: "x",
                    span: 2-3,
                },
                Value: &ast.NumberTypeAnn{
                    span: 5-11,
                },
            },
        },
        span: 1-12,
    },
    span: 0-12,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeShorthandWithFiltering - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 11-12,
                        },
                        span: 11-12,
                    },
                    span: 5-12,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 15-16,
                    },
                    span: 15-16,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 17-18,
                    },
                    span: 17-18,
                },
                span: 15-19,
            },
            Check: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 23-24,
                    },
                    span: 23-24,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 25-26,
                    },
                    span: 25-26,
                },
                span: 23-27,
            },
            Extends: &ast.StringTypeAnn{
                span: 30-36,
            },
            Shorthand: true,
        },
    },
    span: 0-37,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeShorthandAlongsideProperty - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "id",
                span: 1-3,
            },
            Value: &ast.NumberTypeAnn{
                span: 5-11,
            },
        },
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.StringTypeAnn{
                    span: 17-23,
                },
            },
            Value: &ast.NumberTypeAnn{
                span: 27-33,
            },
            Optional: &"add",
            Shorthand: true,
        },
    },
    span: 0-34,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeShorthandOptional - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.StringTypeAnn{
                    span: 5-11,
                },
            },
            Value: &ast.NumberTypeAnn{
                span: 15-21,
            },
            Optional: &"add",
            Shorthand: true,
        },
    },
    span: 0-22,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeShorthand - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 11-12,
                        },
                        span: 11-12,
                    },
                    span: 5-12,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 15-16,
                    },
                    span: 15-16,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 17-18,
                    },
                    span: 17-18,
                },
                span: 15-19,
            },
            Shorthand: true,
        },
    },
    span: 0-20,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeShorthandReadonly - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.KeyOfTypeAnn{
                    Type: &ast.TypeRefTypeAnn{
                        Name: &ast.Ident{
                            Name: "T",
                            span: 20-21,
                        },
                        span: 20-21,
                    },
                    span: 14-21,
                },
            },
            Value: &ast.IndexTypeAnn{
                Target: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 24-25,
                    },
                    span: 24-25,
                },
                Index: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "K",
                        span: 26-27,
                    },
                    span: 26-27,
                },
                span: 24-28,
            },
            ReadOnly: &"add",
            Shorthand: true,
        },
    },
    span: 0-29,
}
---

[TestParseTypeAnnNoErrors/LifetimeArgBracketIsNotTheShorthand - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "K",
                        span: 1:3-1:4,
                    },
                    Op: "<",
                    Right: &ast.IdentExpr{
                        Name: "string",
                        span: 1:10-1:16,
                    },
                    span: 1:3-1:16,
                },
            },
            Optional: true,
            Value: &ast.NumberTypeAnn{
                span: 1:20-1:26,
            },
        },
    },
    span: 1:1-1:27,
}
---

[TestParseTypeAnnNoErrors/MappedObjectTypeTwoShorthandsOverDifferentKeySets - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "K",
                Constraint: &ast.StringTypeAnn{
                    span: 5-11,
                },
            },
            Value: &ast.NumberTypeAnn{
                span: 15-21,
            },
            Optional: &"add",
            Shorthand: true,
        },
        &ast.MappedTypeAnn{
            TypeParam: &ast.IndexParamTypeAnn{
                Name: "J",
                Constraint: &ast.NumberTypeAnn{
                    span: 27-33,
                },
            },
            Value: &ast.BooleanTypeAnn{
                span: 37-44,
            },
            Optional: &"add",
            Shorthand: true,
        },
    },
    span: 0-45,
}
---

[TestParseTypeAnnNoErrors/LifetimeQualifiedBracketIsNotTheShorthand - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.TypeCastExpr{
                    Expr: &ast.IdentExpr{
                        Name: "K",
                        span: 1:6-1:7,
                    },
                    TypeAnn: &ast.StringTypeAnn{
                        span: 1:9-1:15,
                    },
                    span: 1:6-1:15,
                },
            },
            Optional: true,
            Value: &ast.NumberTypeAnn{
                span: 1:19-1:25,
            },
        },
    },
    span: 1:1-1:26,
}
---

[TestParseTypeAnnErrorHandling/LifetimeArgBracketIsNotTheShorthand - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "K",
                        span: 2-3,
                    },
                    Op: "<",
                    Right: &ast.IdentExpr{
                        Name: "string",
                        span: 9-15,
                    },
                    span: 2-15,
                },
            },
            Optional: true,
            Value: &ast.NumberTypeAnn{
                span: 19-25,
            },
        },
    },
    span: 0-26,
}
---

[TestParseTypeAnnErrorHandling/LifetimeArgBracketIsNotTheShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 4-6,
        Message: "Unexpected token, 'a'",
    },
    &parser.Error{
        Span: 6-7,
        Message: "Unexpected token, '>'",
    },
    &parser.Error{
        Span: 7-8,
        Message: "Unexpected token, ':'",
    },
}
---

[TestParseTypeAnnErrorHandling/LifetimeQualifiedBracketIsNotTheShorthand - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.PropertyTypeAnn{
            Name: &ast.ComputedKey{
                Expr: &ast.TypeCastExpr{
                    Expr: &ast.IdentExpr{
                        Name: "K",
                        span: 5-6,
                    },
                    TypeAnn: &ast.StringTypeAnn{
                        span: 8-14,
                    },
                    span: 5-14,
                },
            },
            Optional: true,
            Value: &ast.NumberTypeAnn{
                span: 18-24,
            },
        },
    },
    span: 0-25,
}
---

[TestParseTypeAnnErrorHandling/LifetimeQualifiedBracketIsNotTheShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 2-4,
        Message: "Unexpected token, 'a'",
    },
}
---

[TestParseTypeAnnNoErrors/ObjectMethodWithThrows - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MethodTypeAnn{
            Name: &ast.IdentExpr{
                Name: "parse",
                span: 1-6,
            },
            Fn: &ast.FuncTypeAnn{
                Return: &ast.NumberTypeAnn{
                    span: 16-22,
                },
                Throws: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "SyntaxError",
                        span: 30-41,
                    },
                    span: 30-41,
                },
                span: 6-41,
            },
            Receiver: &ast.MethodReceiver{
                Span_: 7-11,
            },
        },
    },
    span: 0-42,
}
---

[TestParseTypeAnnNoErrors/FuncWithThrows - 1]
&ast.FuncTypeAnn{
    Params: []*ast.Param{
        &ast.Param{
            Pattern: &ast.IdentPat{
                Name: "x",
                span: 3-4,
            },
            TypeAnn: &ast.NumberTypeAnn{
                span: 6-12,
            },
        },
    },
    Return: &ast.BooleanTypeAnn{
        span: 17-24,
    },
    Throws: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "Error",
            span: 32-37,
        },
        span: 32-37,
    },
    span: 0-37,
}
---

[TestParseTypeAnnNoErrors/ObjectConstructorSignatureWithTypeParams - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.ConstructorTypeAnn{
            Fn: &ast.FuncTypeAnn{
                TypeParams: []*ast.TypeParam{
                    &ast.TypeParam{
                        Name: "T",
                        span: 6-7,
                    },
                },
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 9-10,
                        },
                        TypeAnn: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 12-13,
                            },
                            span: 12-13,
                        },
                    },
                },
                Return: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Box",
                        span: 18-21,
                    },
                    TypeArgs: []ast.TypeAnn{
                        &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 22-23,
                            },
                            span: 22-23,
                        },
                    },
                    span: 18-24,
                },
                span: 1-24,
            },
        },
    },
    span: 0-25,
}
---

[TestParseTypeAnnNoErrors/ObjectConstructorSignature - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.ConstructorTypeAnn{
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 6-7,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 9-15,
                        },
                    },
                },
                Return: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 20-25,
                    },
                    span: 20-25,
                },
                span: 1-25,
            },
        },
    },
    span: 0-26,
}
---

[TestParseTypeAnnNoErrors/ObjectConstructorSignatureBesideProperty - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.ConstructorTypeAnn{
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 6-7,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 9-15,
                        },
                    },
                },
                Return: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 20-25,
                    },
                    span: 20-25,
                },
                span: 1-25,
            },
        },
        &ast.PropertyTypeAnn{
            Name: &ast.IdentExpr{
                Name: "origin",
                span: 27-33,
            },
            Value: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "Point",
                    span: 35-40,
                },
                span: 35-40,
            },
        },
    },
    span: 0-41,
}
---

[TestParseTypeAnnNoErrors/ObjectConstructorSignatureWithRestParam - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.ConstructorTypeAnn{
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.RestPat{
                            Pattern: &ast.IdentPat{
                                Name: "args",
                                span: 9-13,
                            },
                            span: 6-13,
                        },
                        TypeAnn: &ast.TupleTypeAnn{
                            Elems: []ast.TypeAnn{
                                &ast.NumberTypeAnn{
                                    span: 16-22,
                                },
                                &ast.StringTypeAnn{
                                    span: 24-30,
                                },
                            },
                            span: 15-31,
                        },
                    },
                },
                Return: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "Point",
                        span: 36-41,
                    },
                    span: 36-41,
                },
                span: 1-41,
            },
        },
    },
    span: 0-42,
}
---

[TestParseTypeAnnErrorHandling/ConstructorSignatureMissingReturnType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.ConstructorTypeAnn{
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 6-7,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 9-15,
                        },
                    },
                },
                Return: &ast.ErrorTypeAnn{
                    span: 17-17,
                },
                span: 1-17,
            },
        },
    },
    span: 0-17,
}
---

[TestParseTypeAnnErrorHandling/ConstructorSignatureMissingReturnType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 16-17,
        Message: "Expected -> but got }",
    },
    &parser.Error{
        Span: 17-17,
        Message: "expected a type annotation",
    },
    &parser.Error{
        Span: 17-17,
        Message: "Expected } but got ",
    },
}
---

[TestParseTypeAnnNoErrors/ObjectMethodWithTypeParams - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MethodTypeAnn{
            Name: &ast.IdentExpr{
                Name: "f",
                span: 1-2,
            },
            Fn: &ast.FuncTypeAnn{
                TypeParams: []*ast.TypeParam{
                    &ast.TypeParam{
                        Name: "T",
                        span: 3-4,
                    },
                },
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 6-7,
                        },
                        TypeAnn: &ast.TypeRefTypeAnn{
                            Name: &ast.Ident{
                                Name: "T",
                                span: 9-10,
                            },
                            span: 9-10,
                        },
                    },
                },
                Return: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 15-16,
                    },
                    span: 15-16,
                },
                span: 5-16,
            },
        },
    },
    span: 0-17,
}
---

[TestParseTypeAnnNoErrors/ObjectMethod - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MethodTypeAnn{
            Name: &ast.IdentExpr{
                Name: "f",
                span: 1-2,
            },
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 3-4,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 6-12,
                        },
                    },
                },
                Return: &ast.StringTypeAnn{
                    span: 17-23,
                },
                span: 2-23,
            },
        },
    },
    span: 0-24,
}
---

[TestParseTypeAnnNoErrors/ObjectSetter - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.SetterTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 5-6,
            },
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "v",
                            span: 17-18,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 20-26,
                        },
                    },
                },
                span: 6-27,
            },
            Receiver: &ast.MethodReceiver{
                Mut: true,
                Span_: 7-15,
            },
        },
    },
    span: 0-28,
}
---

[TestParseTypeAnnNoErrors/ObjectMethodWithReceiver - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.MethodTypeAnn{
            Name: &ast.IdentExpr{
                Name: "f",
                span: 1-2,
            },
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "x",
                            span: 13-14,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 16-22,
                        },
                    },
                },
                Return: &ast.StringTypeAnn{
                    span: 27-33,
                },
                span: 2-33,
            },
            Receiver: &ast.MethodReceiver{
                Mut: true,
                Span_: 3-11,
            },
        },
    },
    span: 0-34,
}
---

[TestParseTypeAnnNoErrors/ObjectSetterWithReturnType - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.SetterTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 5-6,
            },
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "v",
                            span: 17-18,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 20-26,
                        },
                    },
                },
                Return: &ast.LitTypeAnn{
                    Lit: &ast.UndefinedLit{
                        span: 31-40,
                    },
                    span: 31-40,
                },
                span: 6-40,
            },
            Receiver: &ast.MethodReceiver{
                Mut: true,
                Span_: 7-15,
            },
        },
    },
    span: 0-41,
}
---

[TestParseTypeAnnNoErrors/ObjectGetter - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.GetterTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 5-6,
            },
            Fn: &ast.FuncTypeAnn{
                Return: &ast.NumberTypeAnn{
                    span: 16-22,
                },
                span: 6-22,
            },
            Receiver: &ast.MethodReceiver{
                Span_: 7-11,
            },
        },
    },
    span: 0-23,
}
---

[TestParseTypeAnnNoErrors/ObjectGetterWithThrows - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.GetterTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 5-6,
            },
            Fn: &ast.FuncTypeAnn{
                Return: &ast.NumberTypeAnn{
                    span: 16-22,
                },
                Throws: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "RangeError",
                        span: 30-40,
                    },
                    span: 30-40,
                },
                span: 6-40,
            },
            Receiver: &ast.MethodReceiver{
                Span_: 7-11,
            },
        },
    },
    span: 0-41,
}
---

[TestParseTypeAnnNoErrors/ObjectSetterWithThrows - 1]
&ast.ObjectTypeAnn{
    Elems: []ast.ObjTypeAnnElem{
        &ast.SetterTypeAnn{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 5-6,
            },
            Fn: &ast.FuncTypeAnn{
                Params: []*ast.Param{
                    &ast.Param{
                        Pattern: &ast.IdentPat{
                            Name: "v",
                            span: 17-18,
                        },
                        TypeAnn: &ast.NumberTypeAnn{
                            span: 20-26,
                        },
                    },
                },
                Throws: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "RangeError",
                        span: 35-45,
                    },
                    span: 35-45,
                },
                span: 6-45,
            },
            Receiver: &ast.MethodReceiver{
                Mut: true,
                Span_: 7-15,
            },
        },
    },
    span: 0-46,
}
---

[TestParseTypeAnnErrorHandling/VoidIsNotAType - 1]
&ast.LitTypeAnn{
    Lit: &ast.UndefinedLit{
        span: 0-4,
    },
    span: 0-4,
}
---

[TestParseTypeAnnErrorHandling/VoidIsNotAType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 0-4,
        Message: "`void` is not a type in Escalier; write `undefined` instead",
    },
}
---

[TestParseTypeAnnNoErrors/NegationType - 1]
&ast.NegationTypeAnn{
    Type: &ast.TypeRefTypeAnn{
        Name: &ast.Ident{
            Name: "T",
            span: 1-2,
        },
        span: 1-2,
    },
    span: 0-2,
}
---

[TestParseTypeAnnNoErrors/UnionTypeWithNegation - 1]
&ast.UnionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.NegationTypeAnn{
            Type: &ast.TypeRefTypeAnn{
                Name: &ast.Ident{
                    Name: "T",
                    span: 1-2,
                },
                span: 1-2,
            },
            span: 0-2,
        },
        &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "U",
                span: 5-6,
            },
            span: 5-6,
        },
    },
    span: 0-6,
}
---

[TestParseTypeAnnNoErrors/NegationOfLiteral - 1]
&ast.NegationTypeAnn{
    Type: &ast.LitTypeAnn{
        Lit: &ast.StrLit{
            Value: "a",
            span: 1-4,
        },
        span: 1-4,
    },
    span: 0-4,
}
---

[TestParseTypeAnnNoErrors/IntersectionTypeWithNegation - 1]
&ast.IntersectionTypeAnn{
    Types: []ast.TypeAnn{
        &ast.StringTypeAnn{
            span: 0-6,
        },
        &ast.NegationTypeAnn{
            Type: &ast.LitTypeAnn{
                Lit: &ast.StrLit{
                    Value: "a",
                    span: 10-13,
                },
                span: 10-13,
            },
            span: 9-13,
        },
    },
    span: 0-13,
}
---

[TestParseTypeAnnErrorHandling/NegationMissingType - 1]
&ast.NegationTypeAnn{
    Type: &ast.ErrorTypeAnn{
        span: 0-1,
    },
    span: 0-1,
}
---

[TestParseTypeAnnErrorHandling/NegationMissingType - 2]
[]*parser.Error{
    &parser.Error{
        Span: 0-1,
        Message: "expected a type annotation after '~'",
    },
}
---
